--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-https-redirect": "^1.1.0",
-    "react-icons": "^3.11.0",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.0",
+    "react-scripts": "^5.0.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^0.2.4"
   },
